--- a/.github/workflows/scale.yml
+++ b/.github/workflows/scale.yml
@@ -53,6 +53,7 @@ jobs:
         ./az-edge-site-scale -v
     # Run az-edge-site-scale scale
     - name: Run az-edge-site-scale scale
+      id: scale
       run: |
         ./az-edge-site-scale scale -c ./.azure/scale.csv
         rm ./az-edge-site-scale
@@ -61,7 +62,7 @@ jobs:
         rm ./.azure/scale.csv
     # Commit and push the changes
     - name: Commit and push the changes
-      if: always()
+      if: steps.scale.outcome == 'success'
       run: |
         git config --global user.email "scaler@iac.microsoft.com"
         git config --global user.name "IaC Scaler"
