--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -76,13 +76,13 @@ jobs:
     # Download az-edge-module-export
     - name: Download az-edge-module-export
       run: |
-        wget "https://aka.ms/az-edge-module-export-linux-amd64?${{ secrets.PRIVATE_PREVIEW_SAS }}" -O az-edge-module-export
+        wget "https://aka.ms/az-edge-module-export-linux-amd64" -O az-edge-module-export
         chmod +x az-edge-module-export
         ./az-edge-module-export -v
     # Download az-edge-site-scale
     - name: Download az-edge-site-scale
       run: |
-        wget "https://aka.ms/az-edge-site-scale-linux-amd64?${{ secrets.PRIVATE_PREVIEW_SAS }}" -O az-edge-site-scale
+        wget "https://aka.ms/az-edge-site-scale-linux-amd64" -O az-edge-site-scale
         chmod +x az-edge-site-scale
         ./az-edge-site-scale -v
     # Run az-edge-module-export
@@ -92,7 +92,6 @@ jobs:
         rm ./az-edge-module-export
     # Generate sample csv file to scale
     - name: Run az-edge-site-scale generate
-      id: export
       run: |
         mkdir -p ./.azure/scale
         cat ./.azure/export.json | jq -r '.[]|[.baseModulePath, .groupPath] | @tsv' |
@@ -106,7 +105,7 @@ jobs:
         rm ./.azure/export.json
     # Commit and push the changes
     - name: Commit and push the changes
-      if: steps.export.outcome == 'success'
+      if: always()
       run: |
         git config --global user.email "exporter@iac.microsoft.com"
         git config --global user.name "IaC Exporter"
