--- a/.github/workflows/site-cd-workflow.yml
+++ b/.github/workflows/site-cd-workflow.yml
@@ -31,8 +31,8 @@ env:
 jobs:
   terraform:
     name: "Terraform"
-    # runs-on: [windows-latest]
-    runs-on: [self-hosted]
+    runs-on: [windows-latest]
+    # runs-on: [self-hosted]
     environment: terraform
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
