--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -16,6 +16,8 @@ on:
 permissions:
   contents: write
   id-token: write
+  pull-requests: write
+  issues: write
 
 env:
   ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -112,4 +114,3 @@ jobs:
         git add .
         git commit -m "Export Azure resource into config"
         git push
-    
